--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Aman Singh - Portfolio</title>
+    <link rel="shortcut icon" href="assets/extras/favicon.ico" type="image/x-icon">
+    <title>Aman Singh</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
